MICS-9404 Fix menu scroll height in old menu
Fix the old menu scroll height in order to see the last element.
Previously it was hidden under the trigger part of the sider.

--- a/app/react/src/styles/common/application.less
+++ b/app/react/src/styles/common/application.less
@@ -74,6 +74,20 @@ hr {
 }
 
 .mcs-sider {
+  /* Remove the trigger height to fix the scroll height */
+  height: calc(100% - @layout-trigger-height);
+  overflow-y: scroll;
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+.new-mcs-sider {
   height: 100%;
   overflow-y: scroll;
   /* Hide scrollbar for IE, Edge and Firefox */
